<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:backgroundTint="@color/activitybg"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.PlayMusicStreamActivity">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/playMuiscBackbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/down_arrow"
            android:contentDescription="@string/back_music_btn"
            app:tint="@color/secondary_icon_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/secondary_icon_color"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/playMusicfavoritebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/empty_heart"
            android:contentDescription="@string/favorite_btn" />

        <ImageButton
            android:id="@+id/playMusicequiliserbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/equiliser_btn"
            android:src="@drawable/base_setting"
            app:tint="@color/secondary_icon_color" />

<!--        <ImageButton-->
<!--            android:id="@+id/moreInMusic"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="5dp"-->
<!--            android:background="@android:color/transparent"-->
<!--            android:src="@drawable/baseline_more_vert_24"-->
<!--            android:contentDescription="@string/equiliser_btn"-->
<!--            app:tint="@color/primary_purple" />-->
    </LinearLayout>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/playmusicImg"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:strokeColor="@color/white_purple"
        app:strokeWidth="2dp"
        android:src="@mipmap/logo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.24"
        app:shapeAppearanceOverlay="@style/curved" />

    <TextView
        android:id="@+id/playMusicTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/song_name"
        android:textSize="20sp"
        android:textColor="@color/secondary_icon_color"
        android:textStyle="bold"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:scrollHorizontally="true"
        android:marqueeRepeatLimit="marquee_forever"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playmusicImg" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/playitembg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/playMusicPreviousbtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/previous_play"
                android:contentDescription="@string/previous_btn" />

            <FrameLayout
                android:id="@+id/playPauseContainer"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp">

                <ImageButton
                    android:id="@+id/playMusicplaypausebtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/playbtn"
                    android:contentDescription="@string/play_btn" />

                <FrameLayout
                    android:id="@+id/loadingContainer"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_loading_circle"
                    android:visibility="gone"
                    android:clipChildren="false"
                    android:clipToPadding="false">

                    <ProgressBar
                        android:id="@+id/loadingSpinner"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        style="?android:attr/progressBarStyle"
                        android:indeterminate="true"
                        android:indeterminateTint="@android:color/white"
                        android:indeterminateTintMode="src_in" />
                </FrameLayout>

            </FrameLayout>


            <ImageButton
                android:id="@+id/playMusicNextbtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/nextsongplay"
                android:contentDescription="@string/next_btn"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/musicTimeStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/music_start_time"
                android:textColor="@color/secondary_icon_color"
                android:textSize="22sp" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/playMusicSeek"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_weight="1" />

            <TextView
                android:id="@+id/musicEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text=""
                android:textColor="@color/secondary_icon_color"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/repeat"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/baseline_repeat_24"
                android:contentDescription="@string/shuffle_btn"
                app:tint="@color/secondary_icon_color" />

            <ImageButton
                android:id="@+id/stopTimer"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/stop_play_timer"
                android:contentDescription="@string/timer_btn"
                app:tint="@color/secondary_icon_color" />

            <ImageButton
                android:id="@+id/volumeBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/sound_increace"
                android:contentDescription="@string/volume_btn"
                app:tint="@color/secondary_icon_color" />
            <!-- New button to add song to playlist -->
            <ImageButton
                android:id="@+id/addToPlaylistBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/create_playlist"
                android:contentDescription="@string/add_to_playlist_btn"
                app:tint="@color/secondary_icon_color" />

            <ImageButton
                android:id="@+id/sharebtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/sharebtn"
                android:contentDescription="@string/share_btn"
                app:tint="@color/secondary_icon_color" />
                 </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>